# spheroidalwavefunctions

./: .gitignore  __init__.py  meson.build  prolate_swf.f90  pyproject.toml  readme.md  swf.py
