
[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[tool.cibuildwheel]
before-all = "uname -a"
build = ["cp312-*"] # ["cp312-win_amd64"]  # "cp312-manylinux_x86_64",

[project]
name = 'spheroidalwavefunctions'
version = '0.0.1'
license = {file = "license.txt"}
keywords = ["prolate spheroidal wave function", "backscatter", "model"]
authors = [
  { name="Gavin Macaulay"}
]
description = 'Spheroidal wave functions'
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
	"numpy",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering',
]

